# Informatique-R-alitaire

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: DECAP_NEXUS.md  architecture.md  quickstart.md
examples/: multi_agent_basic.py  simple_agent.py
tests_docs/test-1/: logs.txt  test-1.py
tests_docs/test-2/: logs.txt  test-2.py
tests_docs/test-3/: logs.txt  test-3.py
tests_docs/test-4/: logs.txt  test-4.py
